# Project_1_2D_Platformer

./: .gitignore  CMakeLists.txt  README.md  config.ini
engine_from_scratch/: config.ini  main  prog
engine_from_scratch/shaders/: batch_quad.frag  batch_quad.vert
engine_from_scratch/src/: glad.c  main.c
engine_from_scratch/src/engine/: animation.h  array_list.h  entity.h  global.h  input.h  io.h  physics.h  render.h  types.h  util.h
engine_from_scratch/src/engine/animation/: animation.c
engine_from_scratch/src/engine/array_list/: array_list.c
engine_from_scratch/src/engine/audio/: audio.c
engine_from_scratch/src/engine/config/: config.c
engine_from_scratch/src/engine/entity/: entity.c
engine_from_scratch/src/engine/input/: input.c
engine_from_scratch/src/engine/io/: io.c  io.h
engine_from_scratch/src/engine/physics/: physics.c
engine_from_scratch/src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
include/glad/: glad.h
